--- a/_sass/_cv.scss
+++ b/_sass/_cv.scss
@@ -15,7 +15,6 @@ main.wide {
 }
 
 section {
-  background-color: $blog-background-color;
   padding: 0.5em;
 }
 
